--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     </div>
     <header class="main-header">
       <div>
+        <button class="toggle-button">
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+        </button>
+      </div>
+      <div>
         <a class="main-header__brand" href="index.html">
           <img src="./images/uhost-icon.png" />
         </a>
@@ -45,6 +52,19 @@
         </ul>
       </nav>
     </header>
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__items">
+        <li class="mobile-nav__item">
+          <a href="packages/index.html">Packages</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="customers/index.html">Customers</a>
+        </li>
+        <li class="mobile-nav__item mobile-nav__item--cta">
+          <a href="start-hosting/index.html">Start Hosting</a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <section id="product-overview">
         <h1>Get the freedom you deserve.</h1>
