packages and customers sideNavBar add

--- a/packages/index.html
+++ b/packages/index.html
@@ -22,6 +22,13 @@
     <div class="background"></div>
     <header class="main-header">
       <div>
+        <button class="toggle-button">
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+        </button>
+      </div>
+      <div>
         <a class="main-header__brand" href="../index.html">
           <img src="../images/uhost-icon.png" />
         </a>
@@ -40,6 +47,19 @@
         </ul>
       </nav>
     </header>
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__items">
+        <li class="mobile-nav__item">
+          <a href="../packages/index.html">Packages</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="../customers/index.html">Customers</a>
+        </li>
+        <li class="mobile-nav__item mobile-nav__item--cta">
+          <a href="start-hosting/index.html">Start Hosting</a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <section class="package" id="plus">
         <a href="#">
@@ -89,5 +109,6 @@
         </ul>
       </nav>
     </footer>
+    <script src="../shared.js"></script>
   </body>
 </html>
