모바일에 최적화된 요금제 디자인 하기

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section id="product-overview">
         <h1>Get the freedom you deserve.</h1>
       </section>
-      <section id="plans">
+      <section id="plan">
         <h1 class="section-title">Choose Your Plan.</h1>
         <div class="plan__list">
           <article class="plan">
